(lang dune 3.10)

(name rack_display)

(generate_opam_files true)

(source
 (github IliaFeldgun/rack_display))

(authors "Ilia Feldgun")

(maintainers "Ilia Feldgun")

(license LICENSE)

(documentation https://github.com/IliaFeldgun/rack_display)

(package
 (name rack_display)
 (synopsis "Framework for mapping and displaying server racks")
 (description "Web interface and data model for displaying server racks to your friends")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
